  * gras_datadesc_by_name and gras_msgtype_by_name: now raise an exception
    if not found. Use the *_or_null() variant for the old semantic.
  * In gras_msg_handle, do not discard messages without callback.
    They are probably messages to be explicitly awaited later (ie, proofs of
    mis-synchronization in userland since they are sent before being awaited)
    No big deal usually
	
  AMOK:
  * Do really rename the hostmanagement module to peermanagement. [Mt]
    Ie, rename functions from amok_hm_* to amok_pm_*. This breaks the API,
    but this is rather new and this was documented in the module
    documentation (poor excuses, I admit)
    
  SIMDAG:
  * A sequential mode has been added to the workstations. When a workstation
    is in sequential mode, it can execute only one task, and the other tasks
    are waiting in a FIFO. [Christophe Thiery]

  SURF:
  * The KCCFLN05 workstation model now handles parallel tasks. It is the
    model for SIMDAG. [Christophe Thiery]
  * Bug fix in the maxmin solver: Some values were close to 0 instead of
    equal to 0, which caused some bad behaviors in
    saturated_constraint_set_update. I now use a threshold mechanism like in
    surf. [AL]

  XBT:
  * When running manually src/testall, you select specific units [Mt]
    testall is the result of our cunit mecanism, and should replace all
    the scripty thingy around since bash don't run easily on billware.

  * A mallocator system has been added. [Christophe Thiery]
    Mallocators allow you to recycle your unused objects instead of freeing them
    and allocating new ones.

  Documentation update:
  * FAQ reworking + New FAQs:
    - "Valgrind spits tons of errors!" [Mt]
    - "How to repport bugs" [Mt]
    - "Cross-compiling a Windows DLL of SimGrid from Linux" [Mt]
    - Communication time measurement within MSG [AL]
    - I experience weird communication times when I change the latency [AL]
  * GRAS tutorial [Mt]
    It contains: