@@ -53,8 +53,8 @@ int maestro (int argc,char *argv[]);
 int maestro(int argc,char *argv[]) {
   double sec, bw;
   int buf_size=32  *1024;
-  int exp_size=512 *1024;
   int msg_size=512 *1024;
+  int msg_amount = 1;
   double min_duration = 1;
    
   gras_socket_t peer;
@@ -90,15 +90,15 @@ int maestro(int argc,char *argv[]) {
   peer = gras_socket_client(h1->name, h1->port);
 
   INFO0("Test the BW between me and one of the sensors");  
-  amok_bw_test(peer,buf_size,exp_size,msg_size,min_duration,&sec,&bw);
-  INFO6("Experience between me and %s:%d (%d bytes in msgs of %d bytes) took %f sec, achieving %f kb/s",
+  amok_bw_test(peer,buf_size,msg_size,msg_amount,min_duration,&sec,&bw);
+  INFO7("Experience between me and %s:%d (initially %d msgs of %d bytes, maybe modified to fill the pipe at least %.1fs) took %f sec, achieving %f kb/s",
 	h1->name, h1->port,
-	exp_size,msg_size,
+	msg_amount,msg_size,min_duration,
 	sec,((double)bw)/1024.0);
 
   INFO4("Test the BW between %s:%d and %s:%d",	h1->name, h1->port,	h2->name, h2->port);
   amok_bw_request(h1->name, h1->port,	h2->name, h2->port,
-		  buf_size,exp_size,msg_size,min_duration,&sec,&bw);
+		  buf_size,msg_size,msg_amount,min_duration,&sec,&bw);
   INFO6("Experience between %s:%d and %s:%d took took %f sec, achieving %f kb/s",
 	h1->name, h1->port,	h2->name, h2->port,
 	sec,((double)bw)/1024.0);
