@@ -14,13 +14,21 @@ SimGrid (3.1.1) unstable; urgency=low
   * In gras_msg_handle, do not discard messages without callback.
     They are probably messages to be explicitly awaited later (ie, proofs of
     mis-synchronization in userland since they are sent before being awaited)
-    No big deal usually
+    No big deal usually.
+  * gras_socket_meas_send/recv: semantic changed!
+    The numerical arguments used to be (1) the total amount of data to send
+    and (2) msg_size. This was changed to (1) msg_size and (2) amount of
+    messages. This was need for the fool willing to send more than MAXINT
+    bytes on quite fat pipes.
+       
 	
   AMOK:
   * Do really rename the hostmanagement module to peermanagement. [Mt]
     Ie, rename functions from amok_hm_* to amok_pm_*. This breaks the API,
     but this is rather new and this was documented in the module
     documentation (poor excuses, I admit)
+  * Bandwidth measurement semantic changed! This follows the changes to
+    gras_socket_meas_send/recv explained above.
     
   SIMDAG:
   * A sequential mode has been added to the workstations. When a workstation
